--- a/templates/verificar_socio.html
+++ b/templates/verificar_socio.html
@@ -95,8 +95,9 @@
       mensaje.style.color = "#FFD24C";
 
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbyvdwGC2ts__LxjqosumUC3ebqp6E70kwaDgD0Y0mQOa4Nhke-byQKLYS5N6cUku39OBQ/exec");
-        const data = await response.json();
+        const response = await fetch("https://script.google.com/macros/s/AKfycby4cSrlg191p6lEAMMYd0t_HoJ1p9sOMryreAC4rcCF-MemPUZnd-2dH5vM_MEuxShO/exec");
+        const texto = await response.text();
+        const data = JSON.parse(texto);
 
         const socio = data.find(item => item.licencia === licencia);
 
